refactor(model): Aufrufe auf Varargs umstellen
Die Werte gehen einzeln an executeUpdate und queryList, statt vorher in
Arrays gepackt zu werden. Platznummer und Etage sind damit echte Zahlen
und nicht mehr der Umweg über "" + i.

fahrzeugRegistrieren gibt nichts mehr zurück - beide Aufrufer haben den
Rückgabewert ohnehin verworfen, gemeldet wird über den Ereignis-Kanal.

Die Kennzeichenprüfung nutzt \\s als Zeichenklasse; \s war seit Java 15
ein Escape für das Leerzeichen und damit enger gemeint als gedacht.